--- a/hangman.html
+++ b/hangman.html
@@ -7,7 +7,10 @@
         <div class="words">
             <h2>Javascript Hangman Game</h2>
             <h3>Lives left = <span id="livesleft">9</span></h3>
-            <h3>The word = <span id="wordlist"></span></h3>
+            <div class="wordss">
+                <h3>The word = .</h3> 
+            </div>
+        
         </div>
         <div class="letters">
 
